PSP/borradores/ae/jwt/REST-AdrianSaavedra/src/main/java/org/example/restadriansaavedra/common/errors/RoleNotValidException.java
package org.example.restadriansaavedra.common.errors;

public class RoleNotValidException extends RuntimeException {
    public RoleNotValidException(String message) {
        super(message);
    }
}
